# cpp-filetype

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md
.github/workflows/: ci.yml
cmake/: filetypeConfig.cmake.in
docs/: _2_users_2agent-hellboy_2cpp-filetype_2include_2filetype_2filetype_8hpp-example.html  annotated.html  archive_8hpp_source.html  audio_8hpp_source.html  classes.html  custom_footer.html  dir_244570c1347b3e25adf3e673d8467ce5.html  dir_504ff08b43ac537f420b2facb58fc4c0.html  dir_504ff08b43ac537f420b2facb58fc4c0.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  document_8hpp_source.html  doxygen_crawl.html  examples.html  files.html  filetype_8hpp.html  filetype_8hpp.js  filetype_8hpp_source.html  functions.html  functions_vars.html  image_8hpp_source.html  index.html  md__c_o_n_t_r_i_b_u_t_i_n_g.html  navtreedata.js  navtreeindex0.js  pages.html  structfiletype_1_1_type-members.html  structfiletype_1_1_type.html  structfiletype_1_1_type.js  type_8hpp_source.html  types_8hpp.html  types_8hpp_source.html  video_8hpp_source.html
docs/html/: _2_users_2agent-hellboy_2cpp-filetype_2include_2filetype_2filetype_8hpp-example.html  annotated_dup.js  archive_8hpp_source.html  audio_8hpp_source.html  dir_244570c1347b3e25adf3e673d8467ce5.html  dir_244570c1347b3e25adf3e673d8467ce5.js  dir_504ff08b43ac537f420b2facb58fc4c0.html  doxygen_crawl.html  examples.js  filetype_8hpp_source.html  index.html  index.js  md__c_o_n_t_r_i_b_u_t_i_n_g.html  navtreedata.js  structfiletype_1_1_type-members.html  structfiletype_1_1_type.html  type_8hpp_source.html  types_8hpp.html  types_8hpp.js
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_4.js  all_6.js  all_7.js  all_9.js  all_d.js  functions_0.js  searchdata.js  variables_1.js  variables_4.js  variables_5.js  variables_7.js  variables_8.js  variables_a.js
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_0.js  functions_1.js  pages_0.js  pages_1.js  pages_2.js  variables_0.js  variables_2.js  variables_3.js  variables_9.js
example/: file_detect.cpp
include/filetype/: filetype.hpp  type.hpp  types.hpp
include/filetype/types/: archive.hpp  audio.hpp  document.hpp  image.hpp  video.hpp
src/: filetype.cpp
test/: filetype_test.cpp
